# Homework_5

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: celery.py  settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_2484c951eaf88dd9_0001_initial_py.html  z_2484c951eaf88dd9_0002_rename_lessons_lesson_py.html  z_2484c951eaf88dd9_0003_alter_lesson_course_py.html  z_2484c951eaf88dd9_0004_course_owner_lesson_owner_py.html  z_2484c951eaf88dd9___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_f978324627c06562___init___py.html  z_f978324627c06562_admin_py.html  z_f978324627c06562_apps_py.html  z_f978324627c06562_models_py.html  z_f978324627c06562_paginators_py.html  z_f978324627c06562_serializers_py.html  z_f978324627c06562_tests_py.html  z_f978324627c06562_urls_py.html  z_f978324627c06562_validators_py.html  z_f978324627c06562_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  z_fff39e3ca0aaeed4_0002_payment_py.html  z_fff39e3ca0aaeed4_0003_rename_data_payment_date_py.html  z_fff39e3ca0aaeed4_0004_alter_payment_options_subscription_py.html  z_fff39e3ca0aaeed4___init___py.html
materials/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_rename_lessons_lesson.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_course_price_lesson_price.py  0006_course_updated_at.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
users/fixtures/: payments.json  users.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_rename_data_payment_date.py  0004_alter_payment_options_subscription.py  0005_payment_payment_link_payment_payment_status_and_more.py  0006_payment_stripe_payment_intent_id_and_more.py  0007_alter_payment_payment_method.py
workflow/: ci.yml
workflows/: ci.yml
(+1 files in other folders)
