[tool.poetry]
name = "homework-5"
version = "0.1.0"
description = "Django Education Platform"
authors = ["xziste <17alexdmz99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "^5.2.6"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
ipython = "^9.5.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
drf-yasg = "^1.21.11"
stripe = "^13.0.1"
requests = "^2.32.5"
celery = "^5.5.3"
redis = "^7.0.0"
django-celery-beat = "^2.8.1"
eventlet = "^0.40.3"
gunicorn = "^23.0.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.7"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''